--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1 {
   content: "";
   display: block;
   position: absolute;
-  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url("../assets/bg.jpeg");
+  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url("./assets/bg.jpeg");
   left: 0;
   top: 0;
   width: 100%;
